<resources>
    <string name="app_name">Gouitify</string>
    <string name="Search">Search</string>
    <string name="By_track">By track</string>
    <string name="By_artist">By artist</string>
    <string name="By_album">By album</string>
    <string name="Track">Track</string>
    <string name="Tracks">Tracks</string>
    <string name="Artist">Artist</string>
    <string name="Album">Album</string>
    <string name="Albums">Albums</string>
    <string name="by">by</string>
    <string name="on">on</string>
    <string name="Details">Details</string>
    <string name="Genre">Genre</string>
    <string name="image">image</string>
    <string name="Number_of_albums">Number of albums</string>
    <string name="Number_of_tracks">Number of tracks</string>

    <!--Intent extra-->
    <string name="intent_extra_track_id">intent_extra_track_id</string>
    <string name="intent_extra_artist_id">intent_extra_artist_id</string>
    <string name="intent_extra_album_id">intent_extra_album_id</string>

</resources>
